--- a/data/prometheus/prometheus.yml
+++ b/data/prometheus/prometheus.yml
@@ -24,6 +24,10 @@ scrape_configs:
 
     # metrics_path defaults to '/metrics'
     # scheme defaults to 'http'.
-
     static_configs:
       - targets: ["localhost:9090"]
+  - job_name: myapp
+    scrape_interval: 10s
+    static_configs:
+      - targets:
+          - simple-app:2112
