--- a/data/prometheus/prometheus_rules.yml
+++ b/data/prometheus/prometheus_rules.yml
@@ -3,3 +3,22 @@ groups:
     rules:
       - record: expend_over_sales_percentage
         expr: 100 - (100 * app_api_expend_value_histogram_sum / app_api_sales_value_histogram_sum)
+      - record: node_memory_MemFree_percent
+        expr: 100 - (100 * node_memory_MemFree_bytes / node_memory_MemTotal_bytes)
+      - alert: DiskSpaceFree10Percent
+        expr: node_memory_MemFree_percent <= 10
+        labels:
+          severity: warning
+        annotations:
+          summary: 'Instance {{ $labels.instance }} has 10% or less Free disk space'
+          description: '{{ $labels.instance }} has only {{ $value }}% or less free.'
+  - name: alert_rules
+    rules:
+      - alert: InstanceDown
+        expr: up == 0
+        for: 1m
+        labels:
+          severity: critical
+        annotations:
+          summary: 'Instance {{ $labels.instance }} down'
+          description: '{{ $labels.instance }} of job {{ $labels.job }} has been down for more than 1 minute.'
